Add Day2, switch to using .NET 5.0

--- a/AdventOfCode2020/IOLibrary/IOLibrary.csproj
+++ b/AdventOfCode2020/IOLibrary/IOLibrary.csproj
@@ -8,6 +8,9 @@
     <None Update="Data\Day1\PuzzleInput.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\Day2\PuzzleInput.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
